# dicom_parser

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: tests.yml
dicom_parser/: __init__.py  data.py  data_element.py  header.py  image.py  messages.py  parser.py  series.py
dicom_parser/data_elements/: age_string.py  application_entity.py  attribute_tag.py  code_string.py  date.py  date_time.py  decimal_string.py  floating_point_double.py  floating_point_single.py  integer_string.py  long_string.py  long_text.py  messages.py  other_64bit_very_long.py  other_byte.py  other_double.py  other_float.py  other_long.py  other_word.py  person_name.py  private_data_element.py  sequence_of_items.py  short_string.py  short_text.py  signed_64bit_very_long.py  signed_long.py  signed_short.py  time.py  unique_identifier.py  unlimited_characters.py  unlimited_text.py  unsigned_64bit_very_long.py  unsigned_long.py  unsigned_short.py  url.py
dicom_parser/utils/: __init__.py  choice_enum.py  format_header_df.py  mime_generator.py  parse_tag.py  peek.py  private_tags.py  read_file.py  value_representation.py  vr_to_data_element.py
dicom_parser/utils/code_strings/: __init__.py  modality.py  patient_position.py  scanning_sequence.py  sequence_variant.py  sex.py
dicom_parser/utils/sequence_detector/: __init__.py  exceptions.py  messages.py  sequence_detector.py  sequences.py
dicom_parser/utils/siemens/: __init__.py  mosaic.py  private_tags.py
docs/: .coverage  conf.py  dicom_parser.rst  dicom_parser.utils.code_strings.rst  dicom_parser.utils.rst  index.rst  installation.rst  modules.rst  multi_frame.rst  overview.rst  quickstart.rst  release_notes.rst  resources.rst  value_representation.rst  vendors.rst
docs/modules/: dicom_parser.data_elements.rst  dicom_parser.rst  dicom_parser.utils.code_strings.rst  dicom_parser.utils.multi_frame.rst  dicom_parser.utils.rst  dicom_parser.utils.sequence_detector.rst  dicom_parser.utils.siemens.csa.rst  dicom_parser.utils.siemens.rst  modules.rst  reference.rst
docs/siemens/: csa_headers.rst  mosaic.rst  private_tags.rst  siemens.rst
src/dicom_parser/: __init__.py  data_element.py  header.py  image.py  messages.py  series.py
src/dicom_parser/data_elements/: __init__.py  age_string.py  application_entity.py  attribute_tag.py  code_string.py  date.py  date_time.py  decimal_string.py  floating_point_double.py  floating_point_single.py  integer_string.py  long_string.py  long_text.py  messages.py  other_64bit_very_long.py  other_byte.py  other_double.py  other_float.py  other_long.py  other_word.py  person_name.py  private_data_element.py  sequence_of_items.py  short_string.py  short_text.py  signed_64bit_very_long.py  signed_long.py  signed_short.py  time.py  unique_identifier.py  unlimited_characters.py  unlimited_text.py  unsigned_64bit_very_long.py  unsigned_long.py  unsigned_short.py  url.py
src/dicom_parser/utils/: __init__.py  choice_enum.py  exceptions.py  format_header_df.py  image_generator.py  messages.py  mime_generator.py  parse_tag.py  path_generator.py  peek.py  plane.py  private_tags.py  read_file.py  requires_pandas.py  runtime.py  value_representation.py  vr_to_data_element.py
tests/: fixtures.py  test_data_element.py  test_header.py  test_header_information.py  test_image.py  test_mime_generator.py  test_parser.py  test_series.py
tests/data_elements/: fixtures.py  test_age_string.py  test_application_entity.py  test_attribute_tag.py  test_code_string.py  test_date.py  test_date_time.py  test_decimal_string.py  test_floating_point_double.py  test_floating_point_single.py  test_integer_string.py  test_long_string.py  test_long_text.py  test_other_64bit_very_long.py  test_other_byte.py  test_other_double.py  test_other_float.py  test_other_long.py  test_other_word.py  test_person_name.py  test_private_data_element.py  test_sequence_of_items.py  test_short_string.py  test_short_text.py  test_signed_64bit_very_long.py  test_signed_long.py  test_signed_short.py  test_time.py  test_unique_identifier.py  test_unlimited_characters.py  test_unlimited_text.py  test_unsigned_64bit_very_long.py  test_unsigned_long.py  test_unsigned_short.py
tests/files/: 001.dcm  GE_localizer.dcm  csa.json  csa.pickle  dwi_image.dcm  rsfmri_image.dcm  siemens_ascconv_ve11c.dcm  siemens_vr.dcm
tests/utils/: test_choice_enum.py  test_image_generator.py  test_multi_frame.py  test_path_generator.py  test_sequence_detector.py
(+116 files in other folders)
