[metadata]
name = dicom_parser
version = 1.0.2
author = Zvi Baratz
author_email = z.baratz@gmail.com
description = DICOM files parser meant to facilitate data access.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dicom, dcm, mri, ct, radiology
url = https://github.com/ZviBaratz/dicom_parser
project_urls =
    Source = https://github.com/ZviBaratz/dicom_parser/
    Documentation = https://dicom-parser.readthedocs.io/en/latest/
    Bug Reports = https://github.com/ZviBaratz/dicom_parser/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    jinja2~=2.11
    nibabel~=3.0
    pandas~=1.0
    pydicom~=2.1.2

[options.extras_require]
all =
    black==21.5b1
    build
    coverage~=5.5
    coverage-badge~=1.0
    doc8~=0.8
    flake8~=3.7
    ipython
    isort~=5.8
    pytest~=6.2
    python-magic~=0.4
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
    tox~=3.23
    twine
dev =
    black==21.5b1
    coverage~=5.5
    doc8~=0.8
    flake8~=3.7
    ipython
    isort~=5.8
    pytest~=6.2
    python-magic~=0.4
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
    tox~=3.23
dist =
    build
    twine
docs =
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
magic = python-magic~=0.4
test =
    coverage~=5.5
    pytest~=6.2
    python-magic~=0.4
    tox~=3.23

[options.packages.find]
where = src

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401