[metadata]
name = dicom_parser
version = 1.2.2
author = Zvi Baratz
author_email = z.baratz@gmail.com
description = DICOM files parser meant to facilitate data access.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = dicom, dcm, mri, ct, radiology
url = https://github.com/ZviBaratz/dicom_parser
project_urls =
    Source = https://github.com/ZviBaratz/dicom_parser/
    Documentation = https://dicom-parser.readthedocs.io/en/latest/
    Bug Reports = https://github.com/ZviBaratz/dicom_parser/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    numpy;python_version=='3.6'
    numpy~=1.22;python_version>'3.6'
    pydicom~=2.1

[options.extras_require]
magic =
    python-magic~=0.4;platform_system!="Windows"
dist =
    build
    twine
docs =
    sphinx~=4.4
    sphinx-rtd-theme~=1.0
pandas =
    jinja2
    pandas
test =
    coverage[toml]>=6.2
    pickle5~=0.0;python_version<="3.7"
    pytest~=7.0
    tox~=3.24
    %(magic)s
dev =
    black~=22.1
    doc8~=0.10
    flake8~=4.0
    ipython
    isort~=5.10
    pre-commit
    pre-commit-hooks
    %(docs)s
    %(test)s
all =
    %(dev)s
    %(dist)s
    %(pandas)s

[options.packages.find]
where = src

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501
